eks-cluster/k8s/vote-app/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: vote
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
