eks-cluster/k8s/vote-app/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: vote
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
