eks-cluster/k8s/vote-app/result-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
  namespace: vote
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: result
