eks-cluster/k8s/vote-app/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
  namespace: vote
spec:
  ports:
  - port: 80
  selector:
    app: vote
