eks-cluster/k8s/vote-app/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: vote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: result.busyqa.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result
            port:
              number: 80
